# CS121_Project

./: CMakeLists.txt  README.md  new_file.txt
ContactManagementSystem_UI/: ContactManagementSystem_UI.sln  ContactManagementSystem_UI.vcxproj  Documentation.md
ContactManagementSystem_UI/data/: contacts.txt
ContactManagementSystem_UI/include/: Contact.h  ContactManager.h
ContactManagementSystem_UI/src/: Contact.cpp  ContactManager.cpp  main.cpp
src/app/: main.cpp
src/core/: app_state.cpp  app_state.hpp  predicate.cpp  predicate.hpp  ptr_array.hpp  query.cpp  record.hpp  record_array.cpp  record_array.hpp  record_view.hpp  ui_manager.cpp  ui_manager.hpp
src/methods/: addrecord  delete.cpp  savefunction.cpp
